--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -12,6 +12,7 @@
 <body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">&#127950;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
