--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -9,9 +9,10 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">&#127950;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
