Added the what-we-do section and styled it

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -12,6 +12,8 @@
 <body>
     <header>
         <div class="nav-bar container">
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="hamburger">&#9776</label>
             <div class="logo">
                 <a href="#"><img src="/assets/logo_headphones.png" alt="headphones logo"></a>
             </div>
@@ -25,12 +27,51 @@
         </div>
     </header>
 
-    <div class="hero">
-        <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
-        <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
-        <button class="cta-button">CALL TO ACTION</button>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
-    </div>
+    <main>
+        <div class="hero">
+            <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+            <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
+            <button class="cta-button">CALL TO ACTION</button>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt...</p>
+        </div>
+
+        <section id="what-we-do">
+            <div class="information">
+                <div class="information-section">
+                    <h2 class="paragraph">What we do...</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit aperiam, reiciendis pariatur
+                        sint officiis cupiditate laborum minus, nobis similique tenetur deleniti repellat unde in
+                        necessitatibus aliquid quod, a autem neque.
+                    </p>
+                </div>
+            </div>
+            <div class="services-what">
+                <div class="service-card">
+                    <img class="service-img" src="/assets/icons8-sound-wave-100.png" alt="music">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit ame, <br>consecture apidiscing elit.</p>
+                </div>
+                <div class="service-card">
+                    <img class="service-img" src="/assets/icons8-clapperboard-100.png" alt="music">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit ame, <br>consecture apidiscing elit.</p>
+                </div>
+                <div class="service-card">
+                    <img class="service-img" src="/assets/icons8-musical-note-100.png" alt="music">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit ame, <br>consecture apidiscing elit.</p>
+                </div>
+                <div class="service-card">
+                    <img class="service-img" src="/assets/icons8-listen-100.png" alt="music">
+                    <h3>Lorem Ipsum</h3>
+                    <p>Lorem ipsum dolor sit ame, <br>consecture apidiscing elit.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
 </body>
 
 </html>
