Created tthe our-results section and styled it

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -69,9 +69,45 @@
                 </div>
             </div>
         </section>
+        <section id="our-results">
+            <div class="results-text">
+                <h3>Our results speak for themselves</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, velit doloremque voluptate dolorem
+                    nulla maiores saepe nobis provident qui quis, maxime, animi sed suscipit placeat cum deleniti natus
+                    ea nemo?</p>
+            </div>
+            <div class="results-graphics">
+                <div class="result-metric">
+                    <img src="/assets/pentagone.png" alt="result-metric-1">
+                    <div class="metric-text">
+                        <h4>+2%</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </div>
+                <div class="result-metric">
+                     <img src="/assets/pentagone.png" alt="result-metric-1">
+                    <div class="metric-text">
+                        <h4>+2%</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </div>
+                <div class="result-metric">
+                     <img src="/assets/pentagone.png" alt="result-metric-1">
+                    <div class="metric-text">
+                        <h4>+2%</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </div>
+                <div class="result-metric">
+                     <img src="/assets/pentagone.png" alt="result-metric-1">
+                    <div class="metric-text">
+                        <h4>+2%</h4>
+                        <p>Lorem ipsum dolor</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
-
 </body>
 
 </html>
