--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -107,6 +107,15 @@
                 </div>
             </div>
         </section>
+        <section id="contact-us">
+            <h2>Contact us</h2>
+            <form class="contact-form">
+                <input type="text" id="name" placeholder="Name" required>
+                <input type="email" id="email" placeholder="Email" required>
+                <input type="text" id="message" placeholder="Message" required>
+                <button type="submit" id="submit-btn">CALL TO ACTION</button>
+            </form>
+        </section>
     </main>
 </body>
 
