Addded the footer secttion and also applied styled to it

--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -117,6 +117,19 @@
             </form>
         </section>
     </main>
+    <footer>
+        <div class="footer-section-one">
+            <img src="/assets/logo_headphones.png" alt="headphones-logo">
+            <div class="socials">
+                <img src="/assets/icons8-facebook-100.png" alt="facebook">
+                <img src="/assets/icons8-twitter-circled-100.png" alt="twitter">
+                <img src="/assets/icons8-instagram-100.png" alt="instagram">
+            </div>
+        </div>
+        <div class="copyright-section">
+            <p>&copy;headphones 2020</p>
+        </div>
+    </footer>
 </body>
 
 </html>
